Modern idioms pass over the Seam (T11, #16)